@@ -22,6 +22,7 @@
 #include <grub/gui.h>
 #include <grub/font.h>
 #include <grub/gui_string_util.h>
+#include <grub/i18n.h>
 
 static const char *align_options[] =
 {
@@ -178,6 +179,17 @@ label_set_property (void *vself, const char *name, const char *value)
 	}
       else
 	{
+	   if (grub_strcmp (value, "@KEYMAP_LONG@") == 0)
+	    value = _("Press enter to boot the selected OS, "
+	       "\'e\' to edit the commands before booting "
+	       "or \'c\' for a command-line. ESC to return previous menu.");
+           else if (grub_strcmp (value, "@KEYMAP_MIDDLE@") == 0)
+	    value = _("Press enter to boot the selected OS, "
+	       "\'e\' to edit the commands before booting "
+	       "or \'c\' for a command-line.");
+	   else if (grub_strcmp (value, "@KEYMAP_SHORT@") == 0)
+	    value = _("enter: boot, \'e\': options, \'c\': cmd-line");
+	   /* FIXME: Add more templates here if needed.  */
 	  self->template = grub_strdup (value);
 	  self->text = grub_xasprintf (value, self->value);
 	}
